# pocket-tts

./: .gitignore  Cargo.toml  README.md  benchmark_results_20260119_005035.md
.bench_tmp/: results_1.md  results_2.md  results_3.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
candle/: README.md  VOICE_CLONING_PARITY.md  check_output.txt
candle/crates/pocket-tts/: wasm-pack.toml
candle/crates/pocket-tts-cli/src/: main.rs  voice.rs
candle/crates/pocket-tts-cli/src/commands/: generate.rs  mod.rs  serve.rs  wasm_demo.rs
candle/crates/pocket-tts-cli/src/server/: handlers.rs  mod.rs  routes.rs  state.rs
candle/crates/pocket-tts-cli/static/: index.html
candle/crates/pocket-tts-cli/tests/: base64_tests.rs  cli_tests.rs  server_tests.rs  stream_tests.rs
candle/crates/pocket-tts/.cargo/: config.toml
candle/crates/pocket-tts/assets/: tokenizer.json
candle/crates/pocket-tts/benches/: streaming_bench.rs
candle/crates/pocket-tts/examples/: quantize_demo.rs
candle/crates/pocket-tts/examples/wasm/: index.html
candle/crates/pocket-tts/src/: audio.rs  lib.rs  quantize.rs  tts_model.rs  voice_state.rs  wasm.rs
candle/crates/pocket-tts/src/conditioners/: text.rs
candle/crates/pocket-tts/src/models/: mimi.rs  seanet.rs
candle/crates/pocket-tts/src/modules/: conv.rs  mlp.rs
candle/crates/pocket-tts/tests/: integration_tests.rs  parity_tests.rs  streaming_tests.rs
candle/docs/: generate.md  gpu_investigation.md  rust-api.md  serve.md
crates/pocket-tts/: Cargo.toml
crates/pocket-tts-bindings/: Cargo.toml
crates/pocket-tts-cli/: Cargo.toml
crates/pocket-tts-cli/src/commands/: generate.rs
crates/pocket-tts-cli/src/server/: handlers.rs  routes.rs
crates/pocket-tts-cli/web/: components.json  package.json  vite.config.ts
crates/pocket-tts-cli/web/src/: App.tsx  index.css
crates/pocket-tts-cli/web/src/audio/: pcm-processor.ts
crates/pocket-tts-cli/web/src/components/tts/: buffer-visualizer.tsx  voice-selector.tsx
crates/pocket-tts-cli/web/src/components/ui/: progress.tsx
crates/pocket-tts-cli/web/src/hooks/: use-tts-stream.ts
crates/pocket-tts/benches/: attention_bench.rs
crates/pocket-tts/examples/: scaling_bench.rs
crates/pocket-tts/src/: tts_model.rs  wasm.rs  weights.rs
crates/pocket-tts/src/conditioners/: text.rs
crates/pocket-tts/src/models/: flow_lm.rs  mimi.rs  seanet.rs  transformer.rs
crates/pocket-tts/src/modules/: attention.rs  conv.rs  sdpa.rs
crates/pocket-tts/tests/: integration_tests.rs  parity_tests.rs  streaming_tests.rs
docs/: serve.md
scripts/: benchmark.ps1  benchmark.sh  benchmark_mac.sh  benchmark_uvx.ps1  benchmark_uvx.sh
