[workspace]
resolver = "2"
members = [
    "crates/pocket-tts",
    "crates/pocket-tts-cli",
    "crates/pocket-tts-bindings",

]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Pocket TTS Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/babybirdprd/pocket-tts"
homepage = "https://github.com/babybirdprd/pocket-tts"
keywords = ["tts", "candle", "speech-synthesis", "audio"]
categories = ["multimedia::audio", "science"]

[workspace.dependencies]
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
safetensors = "0.5.2"
hf-hub = "0.4.3"
anyhow = "1.0"
thiserror = "2.0"
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
byteorder = "1.5"
memmap2 = "0.9"
clap = { version = "4.5", features = ["derive"] }
tokenizers = { version = "0.21.0", default-features = false }
axum = "0.7"
tokio = "1.0"
tower = "0.4"
tower-http = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
rand = "0.8"
rand_distr = "0.4"


[profile.bench]
debug = true
