[package]
name = "pocket-tts-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for Pocket TTS (Rust port)"
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pocket_tts_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
pocket-tts = { path = "../pocket-tts", version = "0.4.1" }
anyhow = "1.0"
candle-core = "0.9.1" 
